force-app/main/default/objects/NI_Sprint__c/NI_Sprint__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-010897

Used for the NI Project Backlog Object to track project sprints.  Initially created for Newmarket&apos;s IT Department</description>
    <label>Sprint</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Sprint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>