force-app/main/default/objects/NI_Sprint__c/fields/Available_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Days__c</fullName>
    <description>Salesforce.com Change Request: NICC-016293</description>
    <inlineHelpText>Available Days in the current sprint</inlineHelpText>
    <label>Available Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>