force-app/main/default/objects/NI_Sprint__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the Sprint.  This field is auto-populated by a Workflow Rule when the record is created or udated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Sprint.  This field is auto-populated by a Workflow Rule when the record is created or udated</inlineHelpText>
    <label>Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>