force-app/main/default/objects/NI_Sprint__c/fields/Sprint_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sprint Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>