force-app/main/default/objects/NI_Sprint__c/fields/Sprint_Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Retrospective__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sprint Retrospective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>