force-app/main/default/objects/NI_Sprint__c/fields/Sprint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Start_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-010897</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Sprint started</inlineHelpText>
    <label>Sprint Start Date</label>
    <type>Date</type>
</CustomField>