force-app/main/default/objects/NI_Sprint__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>The specific IT Team that the sprint is for</description>
    <inlineHelpText>The specific IT Team that the sprint is for</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Systems</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Security and Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>