force-app/main/default/objects/NI_Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Completion_Date__c</columns>
    <columns>Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>