force-app/main/default/objects/NI_Sprint__c/listViews/Current_Future_Only.listView-meta.xml
<ListView>
    <fullName>Current_Future_Only</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <label>Current &amp; Future Only</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>